package com.codecool.mi6.services;

public interface AlertService {
    void raiseSecurityAlert(String cause);
}
