@startuml

title __SERVICES's Class Diagram__\n

  namespace com.codecool.mi6 {
    namespace services {
      interface com.codecool.mi6.services.AlertService {
          {abstract} + raiseSecurityAlert()
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace services {
      class com.codecool.mi6.services.ConsoleAlertService {
          + raiseSecurityAlert()
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace services {
      class com.codecool.mi6.services.LoginService {
          ~ md5 : DigestUtils
          + LoginService()
          + login()
          - hashPassword()
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace services {
      class com.codecool.mi6.services.MissionService {
          + MissionService()
          + addMission()
          + deactivate()
          + findActiveMissions()
      }
    }
  }
  

  com.codecool.mi6.services.ConsoleAlertService .up.|> com.codecool.mi6.services.AlertService
  com.codecool.mi6.services.LoginService o-- com.codecool.mi6.services.AlertService : alertService
  com.codecool.mi6.services.LoginService o-- com.codecool.mi6.stores.CredentialStore : credentials
  com.codecool.mi6.services.MissionService o-- com.codecool.mi6.services.AlertService : alertService
  com.codecool.mi6.services.MissionService o-- com.codecool.mi6.stores.MissionStore : missionStore


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
